# bazel-compile-commands-extractor

./: BUILD  MODULE.bazel
